--- a/res/layout/form_ekg.xml
+++ b/res/layout/form_ekg.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:gravity ="center"
         android:orientation="vertical" >
 
     <TextView
