Added jeromq server

--- a/res/layout/form_po.xml
+++ b/res/layout/form_po.xml
@@ -7,22 +7,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.vanderbilt.isis.triag.MainActivity$PlaceholderFragment" >
-
+    
     <LinearLayout
-        android:id="@+id/linearLayout1"
+        android:id="@+id/PulseBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+	<TextView
+        android:id="@+id/string12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/poLabel" />
+        android:text="@string/poLabel"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/getPO" 
+        android:onClick="getPulseOx"/>
 
     </LinearLayout>
+
 
 </RelativeLayout>
