--- a/res/layout/form_po.xml
+++ b/res/layout/form_po.xml
@@ -9,7 +9,7 @@
     tools:context="edu.vanderbilt.isis.triag.MainActivity$PlaceholderFragment" >
     
     <LinearLayout
-        android:id="@+id/PulseBox"
+        android:id="@+id/pulseBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -27,9 +27,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/getPO" 
-        android:onClick="getPulseOx"/>
+        android:onClick="getPulse"/>
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:id="@+id/retakePulse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+    </RelativeLayout>
 
 </RelativeLayout>
